# pynewsletter

./: .flake8  README.rst  pyproject.toml
pynewsletter/: cli.py
tests/: test_pynewsletter.py
