[tool.poetry]
name = "pynewsletter"
version = "0.1.0"
description = "CLI to browse pycoders archives"
authors = ["Jacek Nosal <jacek.nosal@outlook.com>"]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-mock = "^3.3.1"
black = "^20.8b1"
flake8 = "^3.8.4"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
